--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,24 +1,26 @@
 <div class="footer">
-        <div class="backtotop" (click)="uptotop()">
-                <i class="sprite sprite-p_back_to_top totop"></i>
-            </div>
+    <div class="backtotop" (click)="uptotop()">
+        <i class="sprite sprite-p_back_to_top totop"></i>
+    </div>
     <div class="footer_sub">
-    <div class="container">
-        <div class="row">
-            <div class="footer_sub--block">
-                <div class="copyright mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="footer_sub--block">
+                    <div class="copyright mt-4">
                         <h5>{{ 'FOOTER.content1' | translate }} {{ 'FOOTER.content2' | translate }}
-                                <span>{{ 'FOOTER.content3' | translate }}</span>
-                            </h5>
-                            <p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}</p>
-                </div>
-                <div class="copyright-footer mb-2">
-                        <p>{{ 'FOOTER.content1' | translate }}<br class="d-block d-sm-none" />{{ 'FOOTER.content2' | translate }}</p>		
-                        <span>{{ 'FOOTER.content3' | translate }}</span>		
-                        <p>{{ 'FOOTER.content4' | translate }} <br class="d-block d-sm-none" />{{ 'FOOTER.content5' | translate }}</p>
+                            <a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
+                        </h5>
+                        <p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+                    </div>
+                    <div class="copyright-footer mb-2">
+                        <p>{{ 'FOOTER.content1' | translate }}<br class="d-block d-sm-none" />{{ 'FOOTER.content2' | translate
+                            }}</p>
+                        <a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
+                        <p>{{ 'FOOTER.content4' | translate }} <br class="d-block d-sm-none" />{{ 'FOOTER.content5' | translate
+                            }}<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
