--- a/src/app/header-login/header-login.component.html
+++ b/src/app/header-login/header-login.component.html
@@ -3,7 +3,7 @@
     <div class="wrapper">
       <div class="bg-logo">
         <h1 class="logo">
-          <a href="/">
+          <a href="/" style="padding: 0;">
             <img src="/assets/Images/logos/logo-h-login.jpg" />
           </a>
         </h1>
