--- a/src/app/login/forgotpassword/forgotpassword.component.html
+++ b/src/app/login/forgotpassword/forgotpassword.component.html
@@ -38,7 +38,7 @@
               <div class="input-wrapper ">
                 <input id="IDcard" name="IDcard" maxlength="13" type="text" formControlName="IDcard" required>
                 <div class="form-control-feedback" *ngIf="this.formforgot.controls.IDcard.errors && ( this.formforgot.controls.IDcard.touched)">
-                  <p *ngIf="this.formforgot.controls.IDcard.errors.required || this.formforgot.controls.IDcard.errors?.minlength">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formforgot.controls.IDcard.errors.required || this.formforgot.controls.IDcard.errors?.minlength">{{ 'Validation.required' | translate }}</p>
                   <!-- <p *ngIf="this.formforgot.controls.IDcard.errors.pattern">ข้อมูลไม่ถูกต้อง</p>																								 -->
                 </div>
               </div>
@@ -49,8 +49,8 @@
               <div class="input-wrapper ">
                 <input id="email" name="email" maxlength="30" type="text" formControlName="email" required>
                 <div class="form-control-feedback" *ngIf="this.formforgot.controls.email.errors && ( this.formforgot.controls.email.touched)">
-                  <p *ngIf="this.formforgot.controls.email.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                  <p *ngIf="this.formforgot.controls.email.errors.pattern">ข้อมูลไม่ถูกต้อง</p>
+                  <p *ngIf="this.formforgot.controls.email.errors.required">{{ 'Validation.required' | translate }}</p>
+                  <p *ngIf="this.formforgot.controls.email.errors.pattern">{{ 'Validation.incorrect' | translate }}</p>
                 </div>
               </div>
             </div>
@@ -62,7 +62,7 @@
             <div class="btn-wrapper-left">
               <div class="row">
                 <div class="col-md-10">
-                  <button class="btn-med btn-back-login" (click)="navigate('')">
+                  <button class="btn-med btn-back-login" type="button" (click)="navigate('')">
                     <p>{{ 'BUTTON.back' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
@@ -76,7 +76,7 @@
             <div class="btn-wrapper-right">
               <div class="row justify-content-end">
                 <div class="col-md-10">
-                  <button class="btn-med btn-confirm-login" (click)="checkpage('otp')">
+                  <button class="btn-med btn-confirm-login btn" type="submit" [disabled]="loading">
                     <p>{{ 'BUTTON.ok' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
@@ -96,16 +96,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">รีเซ็ตรหัสผ่าน</h4>
+        <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
-        <h3>ระบบจะส่งอีเมลรายละเอียดการตั้งหรัสผ่านใหม่ หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ</h3>
+        <h3>{{ 'LOGIN.sent-mail' | translate }}</h3>
       </div>
       <div class="modal-footer" style="display: block;">
         <div class="row justify-content-end">
           <div class="col-sm-6">
             <button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')">
-              <p style="margin-top: 7px;">ตกลง
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
@@ -119,7 +119,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">เข้าสู่ระบบล้มเหลว</h4>
+        <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
         <h3>{{ message }}</h3>
@@ -127,8 +127,8 @@
       <div class="modal-footer" style="display: block;">
         <div class="row justify-content-end">
           <div class="col-sm-6">
-            <button class="btn-med btn-primary" data-dismiss="modal">
-              <p style="margin-top: 7px;">ตกลง
+            <button class="btn-med btn-primary" type="submit" data-dismiss="modal">
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
