--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,83 +11,84 @@
 		</div>
 	</div>
 	<div class="clearfix"></div>
-	<div class="copyright .d-none .d-sm-block">
+	<div class="copyright .d-none .d-sm-block" style="margin-top: 50px">
 		<h5>{{ 'FOOTER.content1' | translate }} {{ 'FOOTER.content2' | translate }}
-			<span>{{ 'FOOTER.content3' | translate }}</span>
+			<a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
 		</h5>
-		<p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}</p>
+		<p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
 	</div>
-</div>
-<div class="clearfix"></div>
-<footer id="footer-wrapper" class="footer-wrapper">
-	<div class="copyright-footer mb-2">
-		<p>{{ 'FOOTER.content1' | translate }}<br class="d-block d-sm-none" />{{ 'FOOTER.content2' | translate }}</p>		
-		<span>{{ 'FOOTER.content3' | translate }}</span>		
-		<p>{{ 'FOOTER.content4' | translate }} <br class="d-block d-sm-none" />{{ 'FOOTER.content5' | translate }}</p>
-	</div>
-</footer>
+	<div class="clearfix"></div>
+	<footer id="footer" class="footer">
+		<div class="copyright-footer">
+			<p>{{ 'FOOTER.content1' | translate }}<br class="d-block d-sm-none" />{{ 'FOOTER.content2' | translate }}
+			</p>
+			<a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
+			<p>{{ 'FOOTER.content4' | translate }} <br class="d-block d-sm-none" />{{ 'FOOTER.content5' | translate }}
+				<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+		</div>
+	</footer>
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="disclaimer">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h4 class="modal-title">ข้อตกลงและเงื่อนไขในการใช้บริการ</h4>
-			</div>
-			<div class="modal-body" id="content-scroll-1">
-				<p>
-					บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด (ในข้อตกลงนี้เรียกว่า “บริษัท”) เป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้
-					เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัท และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัท การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัท
-					ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทและหน้าจอใดๆของเว็บไซต์ หมายถึง
-					ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้ โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท
-				</p>
+	<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="disclaimer">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">ข้อตกลงและเงื่อนไขในการใช้บริการ</h4>
+				</div>
+				<div class="modal-body" id="content-scroll-1">
+					<p>
+						บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด (ในข้อตกลงนี้เรียกว่า “บริษัท”) เป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้
+						เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัท และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัท การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัท
+						ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทและหน้าจอใดๆของเว็บไซต์ หมายถึง
+						ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้ โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท
+					</p>
 
-				<h3>ลิขสิทธิ์</h3>
-				<p>
-					บริษัทเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัท
-					เว้นแต่จะมีการระบุบอย่างชัดเจนเป็นอย่างอื่น ห้ามทำการดัดแปลง จัดเก็บในระบบที่สามารถนำมาใช้งานได้ ถ่ายโอน ลอกเลียนแบบ
-					เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัท
-				</p>
+					<h3>ลิขสิทธิ์</h3>
+					<p>
+						บริษัทเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัท
+						เว้นแต่จะมีการระบุบอย่างชัดเจนเป็นอย่างอื่น ห้ามทำการดัดแปลง จัดเก็บในระบบที่สามารถนำมาใช้งานได้ ถ่ายโอน ลอกเลียนแบบ
+						เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัท
+					</p>
 
-				<h3>การใช้ข้อมูลและส่วนประกอบต่างๆ</h3>
-				<p>
-					ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
-					โดยไม่ต้องแจ้งให้ท่านทราบล่วงหน้า บริษัทสงวนสิทธิ์ในการกลั่นกรองและคัดเลือกผู้ประสงค์ขอใช้บริการต่างๆที่ปรากฏบนเว็บไซต์นี้ตามหลักเกณฑ์ของบริษัท
-					บริษัทจะดำเนินการปรับปรุงข้อมูล ผลิตภัณฑ์และบริการต่างๆของบริษัท ที่ปรากฏในเว็บไซต์ให้ถูกต้องและทันสมัยอยู่เสมอ การเชื่อมต่อเข้าสู่แหล่งอินเตอร์เน็ตอื่นผ่านเว็บไซต์ของบริษัท
-					เป็นความเสี่ยงของท่านเอง และท่านยอมรับว่าบริษัทไม่ต้องรับผิดชอบต่อความเสียหายที่อาจเกิดขึ้นจากการใช้บริการผ่านเว็บไซต์ของบริษัท
-					ไม่ว่าทางตรงหรือทางอ้อม ความบกพร่อง ความล่าช้าในการดำเนินการ การถ่ายโอนข้อมูล หรือความเสียหายที่เกิดจากไวรัสคอมพิวเตอร์
-					การไม่ทำงานของเครือข่ายหรือระบบ ระหว่างการใช้งานเว็บไซต์ของบริษัท หากมีผลิตภัณฑ์อื่นใดที่มีการนำเสนอผ่านเว็บไซต์ของบริษัท
-					บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ
-				</p>
+					<h3>การใช้ข้อมูลและส่วนประกอบต่างๆ</h3>
+					<p>
+						ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
+						โดยไม่ต้องแจ้งให้ท่านทราบล่วงหน้า บริษัทสงวนสิทธิ์ในการกลั่นกรองและคัดเลือกผู้ประสงค์ขอใช้บริการต่างๆที่ปรากฏบนเว็บไซต์นี้ตามหลักเกณฑ์ของบริษัท
+						บริษัทจะดำเนินการปรับปรุงข้อมูล ผลิตภัณฑ์และบริการต่างๆของบริษัท ที่ปรากฏในเว็บไซต์ให้ถูกต้องและทันสมัยอยู่เสมอ การเชื่อมต่อเข้าสู่แหล่งอินเตอร์เน็ตอื่นผ่านเว็บไซต์ของบริษัท
+						เป็นความเสี่ยงของท่านเอง และท่านยอมรับว่าบริษัทไม่ต้องรับผิดชอบต่อความเสียหายที่อาจเกิดขึ้นจากการใช้บริการผ่านเว็บไซต์ของบริษัท
+						ไม่ว่าทางตรงหรือทางอ้อม ความบกพร่อง ความล่าช้าในการดำเนินการ การถ่ายโอนข้อมูล หรือความเสียหายที่เกิดจากไวรัสคอมพิวเตอร์
+						การไม่ทำงานของเครือข่ายหรือระบบ ระหว่างการใช้งานเว็บไซต์ของบริษัท หากมีผลิตภัณฑ์อื่นใดที่มีการนำเสนอผ่านเว็บไซต์ของบริษัท
+						บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ
+					</p>
 
-				<h3>การเชื่อมโยงกับเว็บไซต์อื่นๆ</h3>
-				<p>
-					เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
-					รวมทั้ง มิได้สื่อโดยนัยว่าบริษัทให้การรับรองหรือแนะนำข้อมูลในเว็บไซต์เหล่านั้น การที่ท่านเลือกเข้าเยื่ยมชมเว็บไซต์ที่ให้บริการดาวน์โหลดซอฟแวร์
-					เพื่อวัตถุประสงค์ในการให้ข้อมูลและเพื่อความสะดวกของท่าน ถือว่าท่านยอมรับความเสี่ยงแต่เพียงผู้เดียว หากมีความสูญเสียหรือความเสียหายที่เกิดจากการที่ท่านดาวน์โหลดซอฟแวร์ดังกล่าว
-					บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว
-				</p>
-			</div>
-			<div class="modal-footer">
+					<h3>การเชื่อมโยงกับเว็บไซต์อื่นๆ</h3>
+					<p>
+						เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
+						รวมทั้ง มิได้สื่อโดยนัยว่าบริษัทให้การรับรองหรือแนะนำข้อมูลในเว็บไซต์เหล่านั้น การที่ท่านเลือกเข้าเยื่ยมชมเว็บไซต์ที่ให้บริการดาวน์โหลดซอฟแวร์
+						เพื่อวัตถุประสงค์ในการให้ข้อมูลและเพื่อความสะดวกของท่าน ถือว่าท่านยอมรับความเสี่ยงแต่เพียงผู้เดียว หากมีความสูญเสียหรือความเสียหายที่เกิดจากการที่ท่านดาวน์โหลดซอฟแวร์ดังกล่าว
+						บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว
+					</p>
+				</div>
+				<div class="modal-footer">
 
-				<div class="row justify-content-end">
-					<div class="col-lg-3 col-md-6">
-						<button class="btn-med btn-primary" data-dismiss="modal">
-							<p style="margin-top: 7px;">ยอมรับ
-								<i class="fa fa-angle-right" aria-hidden="true"></i>
-							</p>
-						</button>
+					<div class="row justify-content-end">
+						<div class="col-lg-3 col-md-6">
+							<button class="btn-med btn-primary" data-dismiss="modal">
+								<p style="margin-top: 7px;">ยอมรับ
+									<i class="fa fa-angle-right" aria-hidden="true"></i>
+								</p>
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
+
 		</div>
 
 	</div>
 
-</div>
 
 
-
-<!-- <p-dialog [(visible)]="display" [modal]="true" [responsive]="true" [minWidth]="200" [draggable]="false" [resizable]="false"
+	<!-- <p-dialog [(visible)]="display" [modal]="true" [responsive]="true" [minWidth]="200" [draggable]="false" [resizable]="false"
  [baseZIndex]="10000">
 	<p-header>
 		ข้อตกลงและเงื่อนไขในการใช้บริการ
@@ -140,7 +141,7 @@
 		
 	</p-footer>
 </p-dialog> -->
-<!-- <ng-template #content let-c="close" let-d="dismiss">
+	<!-- <ng-template #content let-c="close" let-d="dismiss">
 	<div class="modal-header">
 		<h4 class="modal-title" id="modal-basic-title">Profile update</h4>
 		<button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
