--- a/src/app/login/signin/signin.component.html
+++ b/src/app/login/signin/signin.component.html
@@ -33,7 +33,7 @@
               <div class="input-wrapper">
                 <input id="name" name="name" maxlength="15" type="text" formControlName="username">
                 <div class="form-control-feedback" *ngIf="this.formsighin.controls.username.errors && (this.formsighin.controls.username.touched)">
-                  <p *ngIf="this.formsighin.controls.username.errors.required || this.formsighin.controls.username.errors?.minlength">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formsighin.controls.username.errors.required">{{ 'Validation.required' | translate }}</p>
                   <!-- <p *ngIf="this.formsighin.controls.username.errors.pattern">อย่างน้อย 8 ตัวอักษร รวมทั้งตัวเลข</p> -->
                 </div>
               </div>
@@ -44,7 +44,7 @@
               <div class="input-wrapper ">
                 <input id="password" name="password" maxlength="15" type="password" formControlName="password">
                 <div class="form-control-feedback" *ngIf="this.formsighin.controls.password.errors && (this.formsighin.controls.password.touched)">
-                  <p *ngIf="this.formsighin.controls.password.errors.required || this.formsighin.controls.password.errors?.minlength">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                  <p *ngIf="this.formsighin.controls.password.errors.required">{{ 'Validation.required' | translate }}</p>
                   <!-- <p *ngIf="this.formsighin.controls.password.errors.pattern">(UpperCase, LowerCase, Number/SpecialChar and
                     min 8 Chars)</p> -->
                 </div>
@@ -81,7 +81,7 @@
             <div class="col-md-12">
               <div class="btn-wrapper-left">
                 <!-- (click)="navigate('./register')" -->
-                <button class="btn-med btn-next-login" (click)="navigate('register')">
+                <button class="btn-med btn-next-login"  type="button" (click)="navigate('register')">
                   <p>{{ 'BUTTON.signup' | translate }}
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                   </p>
@@ -100,7 +100,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">เข้าสู่ระบบล้มเหลว</h4>
+        <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
         <h3>{{ message }}</h3>
@@ -109,7 +109,7 @@
         <div class="row justify-content-end">
           <div class="col-sm-6">
             <button class="btn-med btn-primary" data-dismiss="modal">
-              <p style="margin-top: 7px;">ตกลง
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
