--- a/src/app/profile/changepassword/changepassword.component.html
+++ b/src/app/profile/changepassword/changepassword.component.html
@@ -27,9 +27,9 @@
 
                     <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
                     <div class="select-wrapper inline-block">
-                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
+                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
                             <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{
-                                unitholder.UnitholderNo }}</option>
+                                unitholder.UnitholderNo }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container></option>
                         </select>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="detail-body-wrapper">
-        <form [formGroup]="formchangepass" (ngSubmit)="onSubmit()">
+        <form [formGroup]="formchangepass">
             <div class="row">
                 <div class="col-md-9">
                     <div class="row">
@@ -56,9 +56,8 @@
                             <div class="input-wrapper ">
                                 <input id="currentpassword" name="currentpassword" maxlength="16" type="password" class="bg-gray" formControlName="currentpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.currentpassword.errors && ( this.formchangepass.controls.currentpassword.touched)">
-                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
-                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
+                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.required ">{{ 'Validation.required' | translate }}</p>
+                                    <p *ngIf="this.formchangepass.controls.currentpassword.errors.pattern">{{ 'Validation.password' | translate }}</p>
                                 </div>
                             </div>
                         </div>
@@ -72,9 +71,8 @@
                             <div class="input-wrapper ">
                                 <input id="newpassword" name="newpassword" maxlength="16" type="password" class="bg-gray" formControlName="newpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.newpassword.errors && ( this.formchangepass.controls.newpassword.touched)">
-                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
-                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
+                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.required ">{{ 'Validation.required' | translate }}</p>
+                                    <p *ngIf="this.formchangepass.controls.newpassword.errors.pattern">{{ 'Validation.password' | translate }}</p>
                                 </div>
                             </div>
                         </div>
@@ -88,10 +86,9 @@
                             <div class="input-wrapper ">
                                 <input id="confirmpassword" name="confirmpassword" maxlength="16" type="password" class="bg-gray" formControlName="confirmpassword" required>
                                 <div class="form-control-feedback" *ngIf="this.formchangepass.controls.confirmpassword.errors && ( this.formchangepass.controls.confirmpassword.touched)">
-                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
-                                        ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข</p>
-                                    <p *ngIf="cpwd.hasError('invalid')">รหัสไม่ตรงกัน</p>
+                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.required ">{{ 'Validation.required' | translate }}</p>
+                                    <p *ngIf="this.formchangepass.controls.confirmpassword.errors.pattern">{{ 'Validation.password' | translate }}</p>
+                                    <p *ngIf="cpwd.hasError('invalid')">{{ 'Validation.samepassword' | translate }}</p>
                                 </div>
                             </div>
                         </div>
@@ -100,14 +97,14 @@
 
                     <div class="row">
                         <div class="col-md-3 col-6 offset-md-4">
-                            <button class="btn-med btn-primary">
+                            <button class="btn-med btn-primary btn" type="submit" (click)="onSubmit()" [disabled]="loading">
                                 {{ 'BUTTON.ok' | translate }}
                                 <i class="fa fa-angle-right" aria-hidden="true"></i>
 
                             </button>
                         </div>
                         <div class="col-md-3 col-6">
-                            <button class="btn-med btn-cancel">
+                            <button class="btn-med btn-cancel" type="button" (click)="reset()">
                                 {{ 'BUTTON.cancel' | translate }}
                                 <i class="fa fa-angle-right" aria-hidden="true"></i>
 
@@ -122,7 +119,7 @@
     </div>
 </div>
 <div class="modal fade modal-custom" tabindex="-1" role="dialog"  style="z-index: 9999;" id="otpchangepassword">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog otp" role="document">
         <div class="modal-content">
             <div class="modal-header">
 
@@ -144,7 +141,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="btn-wrapper" style="margin: 0;">
-                                <button class="btn-med btn-blue" (click)="requestotp()">
+                                <button class="btn-med btn-blue" type="button" (click)="requestotp()" [disabled]="loading">
                                     {{ 'BUTTON.otp' | translate }}
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                                 </button>
@@ -161,7 +158,7 @@
                             <div class="input-wrapper">
                                     <input class="bg-gray" id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
                                     <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
-                                      <p *ngIf="this.formotp.controls.otp.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                                      <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate }}</p>
                                       <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
                       
                                     </div>
@@ -175,19 +172,19 @@
                     </div>
                     <div class="row pb-4">
                         <div class="col-md-12">
-                            <p>{{ 'LOGIN.otp-request' | translate }}</p>
+                            <p>{{ 'LOGIN.otp-request' | translate }}{{ 'BUTTON.otp' | translate }}{{ 'LOGIN.otp-request2' | translate }}</p>
                         </div>
                     </div>
 
                     <div class="row mt-3 justify-content-center">
                         <div class="col-md-4 col-6">
-                            <button class="btn-med btn-primary" (click)="updatepassword()">
+                            <button class="btn-med btn-primary btn" type="submit" (click)="updatepassword()" [disabled]="loading">
                                 {{ 'BUTTON.confirm' | translate }}
                                 <i class="fa fa-angle-right" aria-hidden="true"></i>
                             </button>
                         </div>
                         <div class="col-md-4 col-6">
-                            <button class="btn-med btn-cancel" data-dismiss="modal">
+                            <button class="btn-med btn-cancel" type="button" data-dismiss="modal" (click)="resetotp()">
                                 {{ 'BUTTON.cancel' | translate }}
                                 <i class="fa fa-angle-right" aria-hidden="true"></i>
                             </button>
@@ -207,7 +204,7 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">แจ้งเตือน</h4>
+              <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
             </div>
             <div class="modal-body" id="content-scroll-1">
               <h3>{{ message }}</h3>
@@ -216,7 +213,7 @@
               <div class="row justify-content-end">
                 <div class="col-sm-6">
                   <button class="btn-med btn-primary" data-dismiss="modal" (click)="reset()">
-                    <p style="margin-top: 7px;">ตกลง
+                    <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
                   </button>
