--- a/src/app/report/type/type.component.html
+++ b/src/app/report/type/type.component.html
@@ -22,27 +22,27 @@
         </ul>
       </div>
       <div class="col-md-12">
-        <h4>คำย่อ</h4>
+        <h4>{{ 'CONTENT.abbreviation' | translate }}</h4>
       </div>
       <div class="col-md-12">
-        <h4>ประเภทการทำรายการ</h4>
+        <h4>{{ 'CONTENT.tran-type' | translate }}</h4>
       </div>
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
         <p class="no-margin">BF = รายการยกมา</p>
+      </div> -->
+      <div class="col-md-3">
+        <p class="no-margin">SUB = {{ 'CONTENT.SUB' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">SUB = รายการซื้อ</p>
+        <p class="no-margin">RDM = {{ 'CONTENT.RDM' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">RDM = รายการขาย</p>
+        <p class="no-margin">SWI = {{ 'CONTENT.SWI' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">SWI = รายการสับเปลี่ยนเข้า</p>
+        <p class="no-margin">SWO = {{ 'CONTENT.SWO' | translate }}</p>
       </div>
-      <div class="col-md-3">
-        <p class="no-margin">SWO = รายการสับเปลี่ยนออก</p>
-      </div>
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
         <p class="no-margin">ROLL = รายการลงทุนต่อเนื่อง</p>
       </div>
       <div class="col-md-3">
@@ -50,14 +50,14 @@
       </div>
       <div class="col-md-3">
         <p class="no-margin">AS = รายการรับซื้ออัตโนมัติ</p>
+      </div> -->
+      <div class="col-md-3">
+        <p class="no-margin">TRI = {{ 'CONTENT.TRI' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">TRI = รายการรับโอน</p>
+        <p class="no-margin">TRO = {{ 'CONTENT.TRO' | translate }}</p>
       </div>
-      <div class="col-md-3">
-        <p class="no-margin">TRO = รายการโอนออก</p>
-      </div>
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
         <p class="no-margin">CFM = ยืนยันรายการ</p>
       </div>
       <div class="col-md-3">
@@ -74,19 +74,19 @@
       </div>
       <div class="col-md-3">
         <p class="no-margin">ADJ = รายการปรับปรุง</p>
-      </div>
+      </div> -->
 
       <div class="col-md-12 mt-3">
-        <h4>ช่องทางการทำรายการ</h4>
+        <h4>{{ 'CONTENT.tran-way' | translate }}</h4>
       </div>
 
       <div class="col-md-3">
-        <p class="no-margin">LHF = รายการผ่าน LH FUND</p>
+        <p class="no-margin">LHF = {{ 'CONTENT.LHF' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">LHF-I = รายการผ่าน Internet LH FUND</p>
+        <p class="no-margin">LHF-I = {{ 'CONTENT.LHF-I' | translate }}</p>
       </div>
-      <div class="col-md-3">
+      <!-- <div class="col-md-3">
         <p class="no-margin">P = รายการผ่าน LH BANK</p>
       </div>
       <div class="col-md-3">
@@ -100,6 +100,12 @@
       </div>
       <div class="col-md-3">
         <p class="no-margin">SA = รายการผ่าน Selling Agent</p>
+      </div> -->
+      <div class="col-md-3">
+        <p class="no-margin">FUNDCONNECT  = {{ 'CONTENT.FUNDCONNECT' | translate }}</p>
+      </div>
+      <div class="col-md-3">
+        <p class="no-margin">SELLINGAGENT  = {{ 'CONTENT.SELLINGAGENT' | translate }}</p>
       </div>
 
     </div>
