--- a/src/app/canvas-menu/canvas-menu.component.html
+++ b/src/app/canvas-menu/canvas-menu.component.html
@@ -62,14 +62,15 @@
                                 <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="RMF/LTF">RMF/LTF<span class="icon"></span></a></li>
                                 <li id="report"><a routerLink="/report" title="{{ 'HEADER.report' | translate }}">{{ 'HEADER.report' | translate }}<span class="icon"></span></a></li>
                                 <li id="regular-list"><a routerLink="/regular-list" title="{{ 'HEADER.regular' | translate }} ">{{ 'HEADER.regular' | translate }} <span class="icon"></span></a></li>
-                                <li id="profile"><a routerLink="/profile" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
+                                <li id="profile"*ngIf="userdetail.MemberType != 'Agent'"><a routerLink="/profile" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
+                                <li id="profile"*ngIf="userdetail.MemberType == 'Agent'"><a routerLink="/profile/change-password" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
                                 <li >&nbsp;</li>
     </ul>
     <div class="row justify-content-center ">
         <div class="col-md-6 col-10 col-sm-6">
-          <button class="btn-med btn-primary text-center" [routerLink]="['/login']">
+          <button class="btn-med btn-primary text-center" (click)="logout()">
                 <img style="vertical-align: sub;" src="./assets/Images/icons/ico-forgot.png" />
-            ออกจากระบบ
+                {{ 'HEADER.logout' | translate }}
             <!-- <i class="fa fa-angle-right" aria-hidden="true"></i> -->
 
           </button>
