--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                             </a>
                         </li>
                         <li class="ico-yt">
-                            <a href="" title="ออกจากระบบ">
+                            <a (click)="logout()" title="ออกจากระบบ">
                                 <img src="./assets/Images/icons/ico-forgot.png" />
                                 {{ 'HEADER.logout' | translate }}
                             </a>
@@ -49,15 +49,16 @@
   <div class="bottom-menu-wrapper" id="fixed-nav">
       <div class="wrapper">
           <div class="row">
-              <div class="col-lg-3 col-4 ">
-                  <h1 class="logo">
+              <div class="col-xl-4 col-lg-3 col-md-4 col-sm-4 col-4">
+                  <h1 class="logo ">
                       <a routerLink="/logingin">
-                            <img src="./assets/Images/logos/logo-m-post.jpg" />
+                            <img class="d-lg-block d-none" src="./assets/Images/logos/LH-Fund-Logo.svg" />
+                            <img class="d-lg-none d-block" src="./assets/Images/logos/logo-m.png" />
                       </a>
                   </h1>
               </div>
 
-              <div class="col-lg-9 col-8 ">
+              <div class="col-xl-8 col-lg-9 col-md-8 col-sm-8 col-8">
                   <nav id="main-nav" class="main-nav">
                         <div id="menu" class="main-nav-list d-lg-block d-none">
                             <ul id="bottom-main-nav" >
@@ -66,7 +67,8 @@
                                 <li id="rmf-ltf"><a routerLink="/rmf-ltf" title="RMF/LTF">RMF/LTF<span class="icon"></span></a></li>
                                 <li id="report"><a routerLink="/report" title="{{ 'HEADER.report' | translate }}">{{ 'HEADER.report' | translate }}<span class="icon"></span></a></li>
                                 <li id="regular-list"><a routerLink="/regular-list" title="{{ 'HEADER.regular' | translate }} ">{{ 'HEADER.regular' | translate }} <span class="icon"></span></a></li>
-                                <li id="profile"><a routerLink="/profile" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
+                                <li id="profile" *ngIf="userdetail.MemberType != 'Agent'"><a routerLink="/profile" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
+                                <li id="profile" *ngIf="userdetail.MemberType == 'Agent'"><a routerLink="/profile/change-password" title="{{ 'HEADER.profile' | translate }}">{{ 'HEADER.profile' | translate }} <span class="icon"></span></a></li>
                             </ul>                           
                         </div>
                   </nav>                    
