--- a/src/app/login/changepasswordlogin/changepasswordlogin.component.html
+++ b/src/app/login/changepasswordlogin/changepasswordlogin.component.html
@@ -25,41 +25,32 @@
       <form [formGroup]="formchange">
         <div class="detail-login-wrapper">
           <div class="row">
-            <!-- <div class="col-sm-12">
-            <p>ชื่อผู้เข้าระบบ
-            </p>
-            <div class="input-wrapper">
-              <input id="name" name="name" maxlength="30" type="text">
-            </div>
-          </div> -->
             <div class="col-sm-12 form-group" [ngClass]="ValidatorDisplayCss5('password')">
               <p>{{ 'LOGIN.change-p' | translate }}
                 <a style="cursor: pointer;">
-                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้ ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข "></i>
+                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="{{ 'Validation.password' | translate }}"></i>
                 </a>
               </p>
               <div class="input-wrapper ">
                 <input id="password" name="password" maxlength="16" type="password" formControlName="password" required>
                 <div class="form-control-feedback" *ngIf="this.formchange.controls.password.errors && ( this.formchange.controls.password.touched)">
-                  <p *ngIf="this.formchange.controls.password.errors.required ">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                  <p *ngIf="this.formchange.controls.password.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
-                    ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข </p>
+                  <p *ngIf="this.formchange.controls.password.errors.required ">{{ 'Validation.required' | translate }}</p>
+                  <p *ngIf="this.formchange.controls.password.errors.pattern">{{ 'Validation.password' | translate }}</p>
                 </div>
               </div>
             </div>
             <div class="col-sm-12 form-group" [ngClass]="ValidatorDisplayCss5('repeatPassword')">
               <p>{{ 'LOGIN.comfirm-p' | translate }}
                 <a style="cursor: pointer;">
-                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้ ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข "></i>
+                  <i class="fa fa-question-circle" aria-hidden="true" placement="top" ngbTooltip="{{ 'Validation.password' | translate }}"></i>
                 </a>
               </p>
               <div class="input-wrapper ">
                 <input id="repeatPassword" name="repeatPassword" maxlength="16" type="password" formControlName="repeatPassword" required>
                 <div class="form-control-feedback" *ngIf="this.formchange.controls.repeatPassword.errors && ( this.formchange.controls.repeatPassword.touched)">
-                  <p *ngIf="this.formchange.controls.repeatPassword.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                  <p *ngIf="this.formchange.controls.repeatPassword.errors.pattern">รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้
-                    ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข </p>
-                  <p *ngIf="cpwd.hasError('invalid')">รหัสไม่ตรงกัน</p>
+                  <p *ngIf="this.formchange.controls.repeatPassword.errors.required">{{ 'Validation.required' | translate }}</p>
+                  <p *ngIf="this.formchange.controls.repeatPassword.errors.pattern">{{ 'Validation.password' | translate }}</p>
+                  <p *ngIf="cpwd.hasError('invalid')">{{ 'Validation.samepassword' | translate }}</p>
                 </div>
               </div>
             </div>
@@ -71,7 +62,7 @@
             <div class="btn-wrapper-left">
               <div class="row">
                 <div class="col-md-10">
-                  <button class="btn-med btn-back-login" (click)="navigate('/login/forgotpassword')">
+                  <button class="btn-med btn-back-login" type="button" (click)="navigate('/login/forgotpassword')">
                     <p>{{ 'BUTTON.back' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
@@ -85,7 +76,7 @@
             <div class="btn-wrapper-right">
               <div class="row justify-content-end">
                 <div class="col-md-10">
-                  <button class="btn-med btn-confirm-login" type="submit" (click)="checkpage('otp')">
+                  <button class="btn-med btn-confirm-login btn" type="submit" (click)="checkpage('otp')" [disabled]="loading">
                     <p>{{ 'BUTTON.ok' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
@@ -146,7 +137,7 @@
           </div>
           <div class="col-md-5">
             <div class="btn-wrapper">
-              <button class="btn-med btn-blue" (click)="requestotp()">
+              <button class="btn-med btn-blue btn" type="button" (click)="requestotp()" [disabled]="loading">
                 {{ 'BUTTON.otp' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </button>
@@ -163,7 +154,7 @@
             <div class="input-wrapper">
               <input id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
               <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
-                <p *ngIf="this.formotp.controls.otp.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
+                <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate }}</p>
                 <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
 
               </div>
@@ -172,7 +163,7 @@
         </div>
         <div class="row pb-4">
           <div class="col-md-12">
-            <p>{{ 'LOGIN.otp-request' | translate }}</p>
+            <p>{{ 'LOGIN.otp-request' | translate }}{{ 'BUTTON.otp' | translate }}{{ 'LOGIN.otp-request2' | translate }}</p>
           </div>
         </div>
 
@@ -181,7 +172,7 @@
             <div class="btn-wrapper-left">
               <div class="row">
                 <div class="col-md-10">
-                  <button class="btn-med btn-cancel" (click)="navigate('')">
+                  <button class="btn-med btn-cancel" type="button" (click)="navigate('')">
                     <p>
                       {{ 'BUTTON.cancel' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -196,7 +187,7 @@
             <div class="btn-wrapper-right">
               <div class="row justify-content-end">
                 <div class="col-md-10">
-                  <button class="btn-med btn-confirm-login" (click)="checkpage('complete')">
+                  <button class="btn-med btn-confirm-login btn" type="submit" (click)="checkpage('complete')" [disabled]="loading">
                     <p>{{ 'BUTTON.confirm' | translate }}
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
@@ -217,7 +208,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">ยืนยันการเปลี่ยนรหัสผ่าน</h4>
+        <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
         <h3>{{ message }}</h3>
@@ -226,12 +217,12 @@
         <div class="row justify-content-end">
           <div class="col-sm-6">
             <button class="btn-med btn-primary" data-dismiss="modal" (click)="navigate('')" *ngIf="exit">
-              <p style="margin-top: 7px;">ตกลง
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
             <button class="btn-med btn-primary" data-dismiss="modal" *ngIf="!exit">
-              <p style="margin-top: 7px;">ตกลง
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
