--- a/src/app/report/today-list/today-list.component.html
+++ b/src/app/report/today-list/today-list.component.html
@@ -34,9 +34,9 @@
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block  pb-3">
-            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="ddlLink">
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
               <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }}
+                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
               </option>
             </select>
           </div>
@@ -49,7 +49,9 @@
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.report-date' | translate }}</p>
-          <span class="txt-middle">{{ dateformat }}</span>
+          <!-- <span class="txt-middle">{{ dateformat }}</span> -->
+          <ng-container *ngIf="lang == 'th' "><span class="txt-middle">{{ dateformat }}</span></ng-container>
+          <ng-container *ngIf="lang == 'en' "><span class="txt-middle">{{ dateformatEng }}</span></ng-container>
         </div>
 
         <div class="col-sm-6 col-md-12">
@@ -67,30 +69,38 @@
               <thead>
                 <tr>
                   <th>
-                    ชื่อกองทุน
+                    <!-- กองทุน -->
+                    {{ 'TABLE.fund' | translate }}
                   </th>
                   <th>
-                    วันและเวลา
-                    <br/>ที่ทำการ
+                    <!-- วันและเวลา
+                    <br/>ที่ทำรายการ -->
+                    {{ 'TABLE.or-date-time' | translate }}
                   </th>
                   <th>
-                    วันที่มีผล
+                    <!-- วันที่มีผล -->
+                    {{ 'TABLE.ef-date' | translate }}
                   </th>
                   <th>
-                    ประเภท
+                    <!-- ประเภท -->
+                    {{ 'TABLE.type' | translate }}
                   </th>
                   <th>
-                    รายการ
+                    <!-- รายการ -->
+                    {{ 'TABLE.transaction' | translate }}
                   </th>
                   <th>
-                    บาท (THB)
+                    <!-- บาท (THB) -->
+                    {{ 'CONTENT.bath' | translate }} {{ 'TABLE.bath' | translate }}
                   </th>
                   <th>
-                    หน่วย (Unit)
+                    <!-- หน่วย (Unit) -->
+                    {{ 'CONTENT.unit' | translate }} {{ 'TABLE.unit' | translate }}
                   </th>
                   <th>
-                    กองทุน
-                    <br/>ปลายทาง
+                    <!-- กองทุน
+                    <br/>ปลายทาง -->
+                    {{ 'TABLE.des-fund' | translate }}
                   </th>
                   <!-- <th>
                     แก้ไข
@@ -102,6 +112,11 @@
                 </tr>
               </thead>
               <tbody *ngIf="todayreport">
+                <tr class="text-center" *ngIf="nolist">
+                  <td colspan="11">
+                    <p>ไม่พบรายการดังกล่าว</p>
+                  </td>
+                </tr>
                 <ng-container *ngFor="let unitholder of todayreport?.todayreport; let i = index">
 
                   <tr class="topic">
@@ -113,7 +128,9 @@
                   <ng-container *ngFor="let group of unitholder.TodayFunds; let y = index">
                     <tr class="line">
                       <td colspan="9">
-                        ({{group.FundCode}}) {{group.FundName}}
+                        <!-- ({{group.FundCode}}) {{group.FundName}} -->
+                        <ng-container *ngIf="lang == 'th' ">({{group.FundCode}}) {{group.FundName}}</ng-container>
+                        <ng-container *ngIf="lang == 'en' ">({{group.FundCode}}) {{group.FundNameEng}}</ng-container>
                       </td>
                     </tr>
 
@@ -148,9 +165,9 @@
                           <ng-container *ngIf="list.CounterFundCode">
                             {{list.CounterFundCode}}
                           </ng-container>
-                          <ng-container *ngIf="list.SourceFundCode">
+                          <!-- <ng-container *ngIf="list.SourceFundCode">
                             {{list.SourceFundCode}}
-                          </ng-container>
+                          </ng-container> -->
                         </td>
                         <!-- <td>
                           <a>
@@ -170,9 +187,16 @@
 
         </div>
         <div class="col-md-12 mb-5">
-          <p class="color-red no-margin">ข้อมูลที่แสดงข้างต้นนี้อาจมีการเปลี่ยนแปลงแก้ไขได้ หากเป็นรายการซื้อที่เรียกเก็บเงินไม่ได้
-            หรือรายการผิดพลาดใดๆ ทั้งนี้การเปลี่ยนแปลงแก้ไขจะเป็นไปตามวิธี และข้อกำหนดที่ระบุไว้ในโครงการจัดการกองทุนที่ท่านลงทุนรายงานนี้แสดงรายการที่ท่านทำผ่านระบบ
-            @ccess ที่ยังไม่มีผลเท่านั้น</p>
+          <ng-container *ngIf="lang == 'th' ">
+            <p class="color-red no-margin">ข้อมูลที่แสดงข้างต้นนี้อาจมีการเปลี่ยนแปลงแก้ไขได้ หากเป็นรายการซื้อที่เรียกเก็บเงินไม่ได้
+              หรือรายการผิดพลาดใดๆ ทั้งนี้การเปลี่ยนแปลงแก้ไขจะเป็นไปตามวิธี และข้อกำหนดที่ระบุไว้ในโครงการจัดการกองทุนที่ท่านลงทุนรายงานนี้แสดงรายการที่ท่านทำผ่านระบบ
+              LHFund Online ที่ยังไม่มีผลเท่านั้น</p>
+          </ng-container>
+          <ng-container *ngIf="lang == 'en' ">
+            <p class="color-red no-margin">The information shown above may change. if it is an item that cannot be bill or
+              any wrong item The changes will be in accordance with the methods and requirements specified in prospectus.
+              This report show only transaction LHFUND Online that invalid only.</p>
+          </ng-container>
         </div>
 
         <div class="col-md-12">
@@ -228,7 +252,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">คำเตือน</h4>
+        <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
         <h3>{{ message }}</h3>
@@ -237,7 +261,7 @@
         <div class="row justify-content-end">
           <div class="col-sm-6">
             <button class="btn-med btn-primary" data-dismiss="modal">
-              <p style="margin-top: 7px;">ตกลง
+              <p style="margin-top: 7px;">{{ 'BUTTON.ok' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
@@ -262,7 +286,7 @@
         <div class="row mt-3">
           <div class="col-md-6 col-6">
             <p>เลขที่ผู้ถือหน่วยลงทุน</p>
-            <span>{{ userselect.UnitholderNo }}</span>
+            <span>{{ userselect.UnitholderNo }} <ng-container *ngIf="userselect.AgentCode">({{userselect.AgentCode }})</ng-container></span>
           </div>
           <div class="col-md-6 col-6">
             <p>ชื่อผู้ถือหน่วยลงทุน</p>
