--- a/src/app/rmf-ltf/conclusion/conclusion.component.html
+++ b/src/app/rmf-ltf/conclusion/conclusion.component.html
@@ -27,9 +27,9 @@
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block">
-            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno">
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
               <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }}
+                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
               </option>
             </select>
           </div>
@@ -55,14 +55,14 @@
       </div>
       <div class="col-md-3">
         <div class="select-wrapper inline-block">
-          <select [(ngModel)]="years" name="years" id="years">
+          <select [(ngModel)]="years" name="years" id="years" class="selectpicker">
             <option [ngValue]="years" *ngFor="let years of Year; let i = index">{{ years | yearthai }}
             </option>
           </select>
         </div>
       </div>
       <div class="col-md-3">
-        <button class="btn-med btn-primary width50" (click)="Onclick()">
+        <button class="btn-med btn-primary width50 btn" (click)="Onclick()" [disabled]="loading">
           {{ 'BUTTON.ok' | translate }}
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </button>
@@ -79,7 +79,9 @@
                     <h3 class="no-margin">{{ 'CONTENT.sub' | translate }}</h3>
                   </div>
                   <div class="col-md-12">
-                    <h3 class="no-margin">จาก 1 มกราคม {{ years | yearthai }} ถึง 31 ธันวาคม {{ years | yearthai }}</h3>
+                    <!-- <h3 class="no-margin">จาก 1 มกราคม {{ years | yearthai }} ถึง 31 ธันวาคม {{ years | yearthai }}</h3> -->
+                    <ng-container *ngIf="lang == 'th' "><h3 class="no-margin">From 1 มกราคม {{ years | yearthai }} to 31 ธันวาคม {{ years | yearthai }}</h3></ng-container>
+                    <ng-container *ngIf="lang == 'en' "><h3 class="no-margin">From 1 January {{ years }} to 31 December {{ years }}</h3></ng-container>
                   </div>
                 </div>
               </div>
@@ -134,82 +136,106 @@
           <thead>
             <tr>
               <th>
-                วันที่ทำรายการ
+                <!-- วันที่ทำรายการ -->
+                {{ 'TABLE.or-date' | translate }}
               </th>
               <th>
-                เลขที่อ้างอิง
+                <!-- เลขที่อ้างอิง -->
+                {{ 'TABLE.ref' | translate }}
               </th>
               <th>
-                ประเภทหน่วยลงทุน
+                <!-- ประเภทหน่วยลงทุน -->
+                {{ 'TABLE.type-in' | translate }}
               </th>
               <th>
-                มูลค่าต่อหน่วย
+                <!-- มูลค่าต่อหน่วย -->
+                {{ 'TABLE.nav-unit' | translate }}
               </th>
               <th>
-                หน่วย
+                <!-- หน่วย -->
+                {{ 'CONTENT.unit' | translate }}
               </th>
               <th>
-                มูลค่าการลงทุน
+                <!-- มูลค่าการลงทุน -->
+                {{ 'TABLE.invest' | translate }}
               </th>
             </tr>
           </thead>
-          <tbody *ngFor="let list of rmflist; let i = index">
-            <tr class="topic" *ngIf="list.FundNameGroup">
-              <th colspan="9">
-                {{list.FundNameGroup}}
-              </th>
-            </tr>
-            <tr class="line" *ngIf="list.FundName2">
-              <td colspan="6">
-                {{list.FundCode}} : {{list.FundName}}
+          <tbody>
+            <tr class="text-center" *ngIf="nolist">
+              <td colspan="11">
+                <p>ไม่พบรายการดังกล่าว</p>
               </td>
             </tr>
-            <tr>
-              <td class="text-center">
-                {{list.OrderDate | datethai}}
-              </td>
-              <td class="text-center">
-                {{list.ReferenceNo}}
-              </td>
-              <td class="text-center">
-                {{list.FundSubType}}
-              </td>
-              <td class="txt-right">
-                {{list.AllotedNAV | tofix4}}
-              </td>
-              <td class="txt-right">
-                {{list.AllotedUnit | tofix4}}
-              </td>
-              <td class="txt-right">
-                {{list.AllotedAmount | tofix}}
-              </td>
-            </tr>
-            <tr class="summary" *ngIf="list.unit || list.amount">
-              <th colspan="2">
-                รวม {{list.FundCode}}
-              </th>
-              <th class="text-right">
-                &nbsp;
-              </th>
-              <th class="text-right">
-                {{list.nav | tofix4 }}
-              </th>
-              <th class="text-right">
-                {{list.unit | tofix4 }}
-              </th>
+            <ng-container *ngFor="let list of rmflist; let i = index">
+              <tr class="topic" *ngIf="list.FundNameGroup">
+                <th colspan="9">  
+                  <ng-container *ngIf="lang == 'th' ">{{list.FundNameGroup}}</ng-container>
+                  <ng-container *ngIf="lang == 'en' ">{{list.FundNameEngGroup}}</ng-container>
+                </th>
+              </tr>
+              <tr class="line" *ngIf="list.FundName2">
+                <td colspan="6">
+                  <!-- {{list.FundCode}} : {{list.FundName}} -->
+                  <ng-container *ngIf="lang == 'th' ">{{list.FundCode}} : {{list.FundName}}</ng-container>
+                  <ng-container *ngIf="lang == 'en' ">{{list.FundCode}} : {{list.FundNameEng}}</ng-container>
+                </td>
+              </tr>
+              <tr>
+                <td class="text-center">
+                  {{list.OrderDate | datethai}}
+                </td>
+                <td class="text-center">
+                  {{list.ReferenceNo}}
+                </td>
+                <td class="text-center">
+                  {{list.FundSubType}}
+                </td>
+                <td class="txt-right">
+                  {{list.AllotedNAV | tofix4}}
+                </td>
+                <td class="txt-right">
+                  {{list.AllotedUnit | tofix4}}
+                </td>
+                <td class="txt-right">
+                  {{list.AllotedAmount | tofix}}
+                </td>
+              </tr>
+              <tr class="summary" *ngIf="list.unit || list.amount">
+                <th colspan="2">
+                  {{ 'TABLE.total' | translate }} {{list.FundCode}}
+                </th>
+                <th class="text-right">
+                  &nbsp;
+                </th>
+                <th class="text-right">
+                  <!-- {{list.nav | tofix4 }} -->
+                </th>
+                <th class="text-right">
+                  {{list.unit | tofix4 }}
+                </th>
+                <th class="text-right">
+                    {{list.amount | tofix}}
+                </th>
 
-            </tr>
+              </tr>
+            </ng-container>
           </tbody>
 
-          <tbody *ngFor="let list of ltflist; let i = index">
+          <tbody>
+            <ng-container *ngFor="let list of ltflist; let i = index">
             <tr class="topic" *ngIf="list.FundNameGroup">
               <th colspan="9">
-                {{list.FundNameGroup}}
+                <!-- {{list.FundNameGroup}} -->
+                <ng-container *ngIf="lang == 'th' ">{{list.FundNameGroup}}</ng-container>
+                <ng-container *ngIf="lang == 'en' ">{{list.FundNameEngGroup}}</ng-container>
               </th>
             </tr>
             <tr class="line" *ngIf="list.FundName2">
               <td colspan="6">
-                {{list.FundCode}} : {{list.FundName}}
+                <!-- {{list.FundCode}} : {{list.FundName}} -->
+                <ng-container *ngIf="lang == 'th' ">{{list.FundCode}} : {{list.FundName}}</ng-container>
+                <ng-container *ngIf="lang == 'en' ">{{list.FundCode}} : {{list.FundNameEng}}</ng-container>
               </td>
             </tr>
             <tr>
@@ -235,19 +261,23 @@
             <tr class="summary" *ngIf="list.unit || list.amount">
 
               <th colspan="2">
-                รวม {{list.FundCode}}
+                {{ 'TABLE.total' | translate }} {{list.FundCode}}
               </th>
               <th class="text-right">
                 &nbsp;
               </th>
               <th class="text-right">
-                {{list.nav | tofix4}}
+                <!-- {{list.nav | tofix4}} -->
               </th>
               <th class="text-right">
                 {{list.unit | tofix4}}
               </th>
+              <th class="text-right">
+                {{list.amount | tofix}}
+            </th>
 
             </tr>
+          </ng-container>
           </tbody>
         </table>
       </div>
