--- a/src/assets/Content/default/sass/print.scss
+++ b/src/assets/Content/default/sass/print.scss
@@ -163,112 +163,28 @@ a[href]:after {
     border: none !important;
 }
 
+html, body{
+  width: 100%;
+  margin: 0 auto;
+  background-color: #ccc;
+  transform: scale(1.0);
+  transform-origin: 0 0;
+  // display: none;
+}
 
-#header-wrapper, #main-slider {
+@page {
+   size: a4;
+   margin: 2cm 0;
+}
+
+#header-wrapper{
+  display: block;
+}
+
+#main-slider {
     display: none;
 }
 
 .tabs-menu-wrapper{
     display: none;
 }
-
-// .footer {
-//     .register-wrapper, .contact-wrapper, .footer-menu {
-//         display: none !important;
-//     }
-
-//     .footer_sub .footer_sub--block .bottom-menu {
-//         display: none !important;
-//     }
-// }
-
-// .backtotop {
-//     display: none !important;
-// }
-
-// table {
-//     tbody {
-//         border: none !important;
-
-//         tr {
-//             td {
-//                 border: none !important;
-//             }
-//         }
-//     }
-// }
-
-// .table-responsive .table.table-nav > tbody > tr > td {
-//     padding: 10px;
-// }
-
-// .table-responsive .table.table-nav > tbody > tr > th.icon-graph, .table-responsive .table.table-nav > tbody > tr > th.icon-table{
-//     display: none !important;
-// }
-
-// .table-responsive .table.table-nav > tbody > tr > td.icon-graph, .table-responsive .table.table-nav > tbody > tr > td.icon-table {
-//     display: none !important;
-// }
-
-// .page-content-wrapper .heading-section {
-//     padding: 10px;
-//     margin: 0 !important;
-// }
-
-// .page-content-wrapper .fund-detail-wrapper .information-section .risk-level-wrapper .risk-level-chart{
-//     text-align: left !important;
-// }
-
-// .mutual-fund-wrapper {
-//     // .heading-section {
-//     //     .select-wrapper, .input-wrapper, .add-print, .add-download {
-//     //         display: none;
-//     //     }
-//     // }
-
-//     .calendar-wrapper {
-//         padding-top: 0 !important;
-
-//         .date-title, .month-title, .year-title {
-//             display: inline-block !important;
-//             width: auto !important;
-//             margin-right: 10px !important;
-//         }
-//     }
-
-//     .dividend-wrapper .list-group .list-group-item .list-group-content {
-//         display: block !important;
-//     }
-
-//     .dividend-wrapper .dividend-tabs-content .table-responsive .table.table-nav > tbody > tr > td:first-child {
-//         width: auto !important;
-//     }
-
-//     .btn-wrapper {
-//         display: none;
-//     }
-// }
-
-// .matchHeight{
-//     height: auto !important;
-// }
-
-// #calendar {
-//     /*display: none;*/
-//     .fc-header {
-//         display: none !important;
-//     }
-
-//     .fc-widget-content {
-//         border: 1px solid #5a5a5a !important;
-//     }
-// }
-
-// .mutual-fund-wrapper {
-//     .calendar-wrapper {
-//         .date-title, .month-title, .year-title {
-//             font-size: 28px !important;
-//             line-height: 30px !important;
-//         }
-//     }
-// }
